--- a/first_step/index.html
+++ b/first_step/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <h3>This Tutorial Copy <a href="https://ics.media/entry/14771/">ics.media's Article</a></h3>
+            <h3>This Tutorial Copy <a href="https://ics.media/entry/14771/" target="_blunk">ics.media's Article</a></h3>
         </div>
         <canvas id="myCanvas"></canvas>
     </body>
