--- a/geometry/index.html
+++ b/geometry/index.html
@@ -6,11 +6,10 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <div>Material & Writing Phase</div>
+        <div>Geometry Phase</div>
         <div>
-            This Tutorial Copy <a href="https://ics.media/entry/14771/" target="_blunk">ics.media's Article</a>
+            This Tutorial Copy <a href="https://ics.media/tutorial-three/geometry_general/" target="_blunk">ics.media's Article</a>
         </div>
         <canvas id="myCanvas"></canvas>
-        <canvas id="myCanvas2"></canvas>
     </body>
 </html>
