Control mouse tutorial

--- a/camera_control/index.html
+++ b/camera_control/index.html
@@ -10,6 +10,13 @@
         <div>
             This Tutorial Copy <a href="https://ics.media/entry/14771/" target="_blunk">ics.media's Article</a>
         </div>
+        <div>
+            <h3>回転サンプル</h3>
+        </div>
         <canvas id="myCanvas"></canvas>
+        <div>
+            <h3>マウスのX軸の位置で、回転を制御する</h3>
+        </div>
+        <canvas id="myCanvas2"></canvas>
     </body>
 </html>
