--- a/10_merge_geometry/index.html
+++ b/10_merge_geometry/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
-        <script src="index.js"></script>
         <script src="https://unpkg.com/three@0.137.4/examples/js/utils/BufferGeometryUtils.js"></script>
         <script src="https://unpkg.com/stats.js@0.17.0/build/stats.min.js"></script>
 
@@ -12,7 +11,8 @@
     <body>
         <div>Merge Geometry</div>
         <div>This Tutorial Copy <a href="https://ics.media/tutorial-three/geometry_merge/" target="_blunk">ics.media's Article</a></div>
-        <div class="ui toggle checkbox">
+
+        <div class="ui toggle checkbox" style="margin: 10px;">
             <input type="checkbox" name="optimization" id="optimization">
             <label>Optimization</label>
         </div>
@@ -20,5 +20,10 @@
             <canvas id="myCanvas"></canvas>
             <pre id="info"></pre>
         </div>
+
+        <script src="index.js"></script>
+
     </body>
+
+    
 </html>
