Add Tweenmotion panorama

--- a/11_panorama/index.html
+++ b/11_panorama/index.html
@@ -37,6 +37,11 @@
         </div> -->
 
         <div id="myCanvas"></div>
+        <!-- <div id="operation">
+            <ul class="buttons">
+                <li>change</li>
+            </ul>
+        </div> -->
         <script src="index.js"></script>
 
     </body>
