--- a/11_panorama/index.html
+++ b/11_panorama/index.html
@@ -1,12 +1,16 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
         <script src="https://unpkg.com/three@0.137.4/examples/js/controls/OrbitControls.js"></script>
         <script src="https://unpkg.com/three@0.137.4/examples/js/renderers/CSS3DRenderer.js"></script>
-
+        <script src="https://unpkg.com/three@0.137.4/examples/js/loaders/GLTFLoader.js"></script>
+        <script src="https://unpkg.com/three@0.137.4/examples/js/loaders/DRACOLoader.js"></script>
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha512-dqw6X88iGgZlTsONxZK9ePmJEFrmHwpuMrsUChjAw1mRUhUITE5QU9pkcSox+ynfLhL15Sv2al5A0LVyDCmtUw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
 
     <style>
@@ -35,14 +39,15 @@
         <!-- <div class="container">
             Test Script
         </div> -->
-
-        <div id="myCanvas"></div>
-        <!-- <div id="operation">
-            <ul class="buttons">
-                <li>change</li>
+        <div id="operation">
+            <ul id="detail">
+                
             </ul>
-        </div> -->
-        <script src="index.js"></script>
+        </div>
+        <div id="myCanvas"></div>
+
+        <!-- <script src="index.js"></script> -->
+        <script src="js/gltf.js"></script>
 
     </body>
 
