--- a/11_panorama/index.html
+++ b/11_panorama/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,12 +15,15 @@
     </head>
 
     <style>
-        .container {
-            width: 150px;
-            height: 150px;
-            background-color: white;
-            display: flex;
-            justify-content: center;
+        html {
+            overscroll-behavior: none;
+        }
+        body{
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            overscroll-behavior: none;
         }
     </style>
 
@@ -40,6 +44,10 @@
             Test Script
         </div> -->
         <div id="operation">
+            <ul class="buttons">
+                <button id="bg1">change</button>
+                <li><button id="bg2">background2</button></li>
+            </ul>
             <ul id="detail">
                 
             </ul>
@@ -48,6 +56,8 @@
 
         <!-- <script src="index.js"></script> -->
         <script src="js/gltf.js"></script>
+
+        <script src="js/operation.js"></script>
 
     </body>
 
